<resources>
    <string name="app_name">PossessorApp</string>
    <string name="nameLabel">Nombre</string>
    <string name="priceLabel">Precio</string>
    <string name="serialLabel">No. de Serie</string>
    <string name="dateLabel">Fecha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serialNumberLabel">Número de serie</string>
    <string name="modifyDateButton">Modificar fecha</string>
    <string name="newThingItem">Agregar nueva cosa</string>
    <string name="thingImage">Imagen cosa</string>
    <string name="cameraButton">Botón cámara</string>
    <string name="sectionLabel">Sección</string>
    <string name="numberOfThingsBySection">Número de cosas: 0</string>
    <string name="thingPriceSumBySection">Suma de precios: $0</string>
    <string name="totalThings">Total de cosas: 0</string>
    <string name="totalPriceSum">Suma total de precios: $0</string>
    <string name="deleteImageButton">Eliminar imagen</string>
    <string name="orderByLabel">ASC</string>
    <string name="thumbnailDescription">Thumbnail</string>
    <string name="orderByDateDescription">Ordenar por fecha</string>
    <string name="orderByAlphaDescription">Ordenar por alfabeto</string>
    <string name="changeViewLabel">List</string>
</resources>